syntax = "proto3";

package foodaid.Surplus;

option java_multiple_files = true;
option java_package = "grpc.foodaid.Surplus";
option java_outer_classname = "SurplusImpl";




// Unary RPC: service to record food surplus
   service SurplusService {
       rpc SurplusRecord (SurplusRequest) returns (SurplusAcknowledge);
   }
   
   
message SurplusRequest {
	//int32 id = 1;                // unique identifier
	string food_type = 2;        // type of food that is in surplus
	int32 quantity_food = 3;     // quantity of food
	int32 nutritional_grade = 4; // nutritional rate for food type i.e. 1-10
	string location = 5;         // location of surplus
	int32 depo = 6;              // depo ID for where surplus is stored
}

message SurplusAcknowledge {
	bool accept = 1;  // true if recorded
	string message = 2; // Surplus registered
}

